# cymep-huracanpy

./: .gitignore  README.md  pyproject.toml
cymep/: cymep.py  cymep_graphics.py  example_config.yaml  mask_tc.py  pattern_cor.py  track_density.py
cymep/csv-files/: means_rean_configs_NATL_climo_mean_old.nc  metrics_rean_configs_NATL_old.nc  storms_rean_configs_NATL_20CRv3_output_old.nc  storms_rean_configs_NATL_CFSR_output_old.nc  storms_rean_configs_NATL_ERA5_output_old.nc  storms_rean_configs_NATL_ERAI_output_old.nc  storms_rean_configs_NATL_JRA_output_old.nc  storms_rean_configs_NATL_MERRA2_output_old.nc  storms_rean_configs_NATL_MERRA_output_old.nc  storms_rean_configs_NATL_OBS_output_old.nc
cymep/functions/: getTrajectories.py  mask_tc.py  pattern_cor.py  track_density.py  write_spatial.py
cymep/netcdf-files/: netcdf_NATL_rean_configs_old.nc
cymep/utils/: colormap.py
example/: example_config.yaml
example/cymep-data/: diags_rean_configs_NATL_old.nc  means_rean_configs_NATL_old.nc  storms_rean_configs_NATL_20CRv3_old.nc  storms_rean_configs_NATL_CFSR_old.nc  storms_rean_configs_NATL_ERA5_old.nc  storms_rean_configs_NATL_ERAI_old.nc  storms_rean_configs_NATL_JRA_old.nc  storms_rean_configs_NATL_MERRA2_old.nc  storms_rean_configs_NATL_MERRA_old.nc  storms_rean_configs_NATL_OBS_old.nc
tests/: test_reproduces_results.py
